--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 contourpy==1.3.0
 cycler==0.12.1
 fonttools==4.54.1
@@ -6,6 +7,9 @@ matplotlib==3.9.2
 numpy==2.1.2
 packaging==24.1
 pillow==11.0.0
+pyinstaller==6.11.0
+pyinstaller-hooks-contrib==2024.9
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+setuptools==75.2.0
 six==1.16.0
